@@ -1,6 +1,5 @@
 package com.clevercloud.biscuit.builder.parser;
 
-import com.clevercloud.biscuit.datalog.ID;
 import com.clevercloud.biscuit.datalog.SymbolTable;
 import com.clevercloud.biscuit.datalog.expressions.Op;
 import com.clevercloud.biscuit.token.builder.*;
@@ -9,102 +8,91 @@ import com.clevercloud.biscuit.token.builder.parser.Parser;
 import io.vavr.Tuple2;
 import io.vavr.control.Either;
 import io.vavr.control.Option;
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
+import java.util.*;
 
 import static com.clevercloud.biscuit.token.builder.Utils.*;
 
-public class ParserTest extends TestCase {
-    public ParserTest(String testName) { super(testName); }
+class ParserTest {
 
-    public static Test suite() {
-        return new TestSuite(com.clevercloud.biscuit.builder.parser.ParserTest.class);
+    @Test
+    void testName() {
+        Either<Error, Tuple2<String, String>> res = Parser.name("operation(read)");
+        assertEquals(Either.right(new Tuple2<>("(read)", "operation")), res);
     }
 
-    public void testName() {
-        Either<Error, Tuple2<String, String>> res = Parser.name("operation(#ambient, #read)");
-        assertEquals(Either.right(new Tuple2<String, String>("(#ambient, #read)", "operation")), res);
-    }
-
-    public void testSymbol() {
-        Either<Error, Tuple2<String, Term.Symbol>> res = Parser.symbol("#ambient");
-        assertEquals(Either.right(new Tuple2<String, Term.Symbol>("", (Term.Symbol) s("ambient"))), res);
-    }
-
-    public void testString() {
+    @Test
+    void testString() {
         Either<Error, Tuple2<String, Term.Str>> res = Parser.string("\"file1 a hello - 123_\"");
-        assertEquals(Either.right(new Tuple2<String, Term.Str>("", (Term.Str) string("file1 a hello - 123_"))), res);
+        assertEquals(Either.right(new Tuple2<>("", (Term.Str) string("file1 a hello - 123_"))), res);
     }
 
-    public void testInteger() {
+    @Test
+    void testInteger() {
         Either<Error, Tuple2<String, Term.Integer>> res = Parser.integer("123");
-        assertEquals(Either.right(new Tuple2<String, Term.Integer>("", (Term.Integer) integer(123))), res);
+        assertEquals(Either.right(new Tuple2<>("", (Term.Integer) integer(123))), res);
 
         Either<Error, Tuple2<String, Term.Integer>> res2 = Parser.integer("-42");
-        assertEquals(Either.right(new Tuple2<String, Term.Integer>("", (Term.Integer) integer(-42))), res2);
+        assertEquals(Either.right(new Tuple2<>("", (Term.Integer) integer(-42))), res2);
     }
 
-    public void testDate() {
+    @Test
+    void testDate() {
         Either<Error, Tuple2<String, Term.Date>> res = Parser.date("2019-12-02T13:49:53Z,");
-        assertEquals(Either.right(new Tuple2<String, Term.Date>(",", new Term.Date(1575294593))), res);
+        assertEquals(Either.right(new Tuple2<>(",", new Term.Date(1575294593))), res);
     }
 
-    public void testVariable() {
+    @Test
+    void testVariable() {
         Either<Error, Tuple2<String, Term.Variable>> res = Parser.variable("$name");
-        assertEquals(Either.right(new Tuple2<String, Term.Variable>("", (Term.Variable) var("name"))), res);
+        assertEquals(Either.right(new Tuple2<>("", (Term.Variable) var("name"))), res);
     }
 
-    public void testConstraint() {
-    }
-
-    public void testFact() {
-        Either<Error, Tuple2<String, Fact>> res = Parser.fact("right( #authority, \"file1\", #read )");
-        assertEquals(Either.right(new Tuple2<String, Fact>("",
-                fact("right", Arrays.asList(s("authority"), string("file1"), s("read"))))),
+    @Test
+    void testFact() throws com.clevercloud.biscuit.error.Error.Language {
+        Either<Error, Tuple2<String, Fact>> res = Parser.fact("right( \"file1\", \"read\" )");
+        assertEquals(Either.right(new Tuple2<>("",
+                fact("right", Arrays.asList(string("file1"), s("read"))))),
                 res);
 
-        Either<Error, Tuple2<String, Fact>> res2 = Parser.fact("right( #authority, $var, #read )");
-        //assertEquals(Either.left(new Error("$var, #read )", "variables are not allowed in facts")),
-        //    res2);
-        assertEquals(Either.left(new Error("$var, #read )", "closing parens not found")),
+        Either<Error, Tuple2<String, Fact>> res2 = Parser.fact("right( $var, \"read\" )");
+        assertEquals(Either.left(new Error("$var, \"read\" )", "closing parens not found")),
                 res2);
 
-        Either<Error, Tuple2<String, Fact>> res3 = Parser.fact("date(#ambient,2019-12-02T13:49:53Z)");
-        assertEquals(Either.right(new Tuple2<String, Fact>("",
-                        fact("date", Arrays.asList(s("ambient"), new Term.Date(1575294593))))),
+        Either<Error, Tuple2<String, Fact>> res3 = Parser.fact("date(2019-12-02T13:49:53Z)");
+        assertEquals(Either.right(new Tuple2<>("",
+                        fact("date", List.of(new Term.Date(1575294593))))),
                 res3);
     }
 
-    public void testRule() {
+    @Test
+    void testRule() {
         Either<Error, Tuple2<String, Rule>> res =
-                Parser.rule("right(#authority, $resource, #read) <- resource( #ambient, $resource), operation(#ambient, #read)");
-        assertEquals(Either.right(new Tuple2<String, Rule>("",
+                Parser.rule("right($resource, \"read\") <- resource($resource), operation(\"read\")");
+        assertEquals(Either.right(new Tuple2<>("",
                         rule("right",
-                                Arrays.asList(s("authority"), var("resource"), s("read")),
+                                Arrays.asList(var("resource"), s("read")),
                                 Arrays.asList(
-                                        pred("resource", Arrays.asList(s("ambient"), var("resource"))),
-                                        pred("operation", Arrays.asList(s("ambient"), s("read"))))
+                                        pred("resource", List.of(var("resource"))),
+                                        pred("operation", List.of(s("read"))))
                         ))),
                 res);
     }
 
-    public void testRuleWithExpression() {
+    @Test
+    void testRuleWithExpression() {
             Either<Error, Tuple2<String, Rule>> res =
-                Parser.rule("valid_date(\"file1\") <- time(#ambient, $0 ), resource( #ambient, \"file1\"), $0 <= 2019-12-04T09:46:41+00:00");
-        assertEquals(Either.right(new Tuple2<String, Rule>("",
+                Parser.rule("valid_date(\"file1\") <- time($0 ), resource( \"file1\"), $0 <= 2019-12-04T09:46:41+00:00");
+        assertEquals(Either.right(new Tuple2<>("",
                         constrained_rule("valid_date",
-                                Arrays.asList(string("file1")),
+                                List.of(string("file1")),
                                 Arrays.asList(
-                                        pred("time", Arrays.asList(s("ambient"),  var("0"))),
-                                        pred("resource", Arrays.asList(s("ambient"),  string("file1")))
+                                        pred("time", List.of(var("0"))),
+                                        pred("resource", List.of(string("file1")))
                                         ),
-                                Arrays.asList(
+                                List.of(
                                         new Expression.Binary(
                                                 Expression.Op.LessOrEqual,
                                                 new Expression.Value(var("0")),
@@ -114,17 +102,18 @@ public class ParserTest extends TestCase {
                 res);
     }
 
-    public void testRuleWithExpressionOrdering() {
+    @Test
+    void testRuleWithExpressionOrdering() {
         Either<Error, Tuple2<String, Rule>> res =
-                Parser.rule("valid_date(\"file1\") <- time(#ambient, $0 ), $0 <= 2019-12-04T09:46:41+00:00, resource( #ambient, \"file1\")");
-        assertEquals(Either.right(new Tuple2<String, Rule>("",
+                Parser.rule("valid_date(\"file1\") <- time($0 ), $0 <= 2019-12-04T09:46:41+00:00, resource(\"file1\")");
+        assertEquals(Either.right(new Tuple2<>("",
                         constrained_rule("valid_date",
-                                Arrays.asList(string("file1")),
+                                List.of(string("file1")),
                                 Arrays.asList(
-                                        pred("time", Arrays.asList(s("ambient"),  var("0"))),
-                                        pred("resource", Arrays.asList(s("ambient"),  string("file1")))
+                                        pred("time", List.of(var("0"))),
+                                        pred("resource", List.of(string("file1")))
                                 ),
-                                Arrays.asList(
+                                List.of(
                                         new Expression.Binary(
                                                 Expression.Op.LessOrEqual,
                                                 new Expression.Value(var("0")),
@@ -134,28 +123,30 @@ public class ParserTest extends TestCase {
                 res);
     }
 
-    public void testCheck() {
+    @Test
+    void testCheck() {
         Either<Error, Tuple2<String, Check>> res =
-                Parser.check("check if resource(#ambient, $0), operation(#ambient, #read) or admin(#authority)");
-        assertEquals(Either.right(new Tuple2<String, Check>("", new Check(Arrays.asList(
+                Parser.check("check if resource($0), operation(\"read\") or admin()");
+        assertEquals(Either.right(new Tuple2<>("", new Check(Arrays.asList(
                     rule("query",
                             new ArrayList<>(),
                             Arrays.asList(
-                                    pred("resource", Arrays.asList(s("ambient"),  var("0"))),
-                                    pred("operation", Arrays.asList(s("ambient"),  s("read")))
+                                    pred("resource", List.of(var("0"))),
+                                    pred("operation", List.of(s("read")))
                             )
                     ),
                     rule("query",
                             new ArrayList<>(),
-                            Arrays.asList(
-                                    pred("admin", Arrays.asList(s("authority")))
+                            List.of(
+                                    pred("admin", List.of())
                             )
                     )
                     )))),
                 res);
     }
 
-    public void testExpression() {
+    @Test
+    void testExpression() {
         Either<Error, Tuple2<String, Expression>> res =
                 Parser.expression(" -1 ");
 
@@ -193,9 +184,9 @@ public class ParserTest extends TestCase {
         long test = s3.insert("test");
         assertEquals(
                 Arrays.asList(
-                        new Op.Value(new ID.Integer(1)),
-                        new Op.Value(new ID.Variable(test)),
-                        new Op.Value(new ID.Integer(2)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(1)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Variable(test)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(2)),
                         new Op.Binary(Op.BinaryOp.Add),
                         new Op.Binary(Op.BinaryOp.LessThan)
                 ),
@@ -227,9 +218,9 @@ public class ParserTest extends TestCase {
                 res4);
 
         Either<Error, Tuple2<String, Expression>> res5 =
-                Parser.expression("  [ #abc, #def ].contains($operation) ");
+                Parser.expression("  [ \"abc\", \"def\" ].contains($operation) ");
 
-        HashSet<Term> s = new HashSet();
+        HashSet<Term> s = new HashSet<>();
         s.add(s("abc"));
         s.add(s("def"));
 
@@ -243,7 +234,8 @@ public class ParserTest extends TestCase {
                 res5);
     }
 
-    public void testParens() {
+    @Test
+    void testParens() {
         Either<Error, Tuple2<String, Expression>> res =
                 Parser.expression("  1 + 2 * 3  ");
 
@@ -267,18 +259,18 @@ public class ParserTest extends TestCase {
 
         assertEquals(
                 Arrays.asList(
-                        new Op.Value(new ID.Integer(1)),
-                        new Op.Value(new ID.Integer(2)),
-                        new Op.Value(new ID.Integer(3)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(1)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(2)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(3)),
                         new Op.Binary(Op.BinaryOp.Mul),
                         new Op.Binary(Op.BinaryOp.Add)
                 ),
                 ex.getOps()
         );
 
-        HashMap variables = new HashMap();
-        Option<ID> value = ex.evaluate(variables);
-        assertEquals(Option.some(new ID.Integer(7)), value);
+        Map<Long,com.clevercloud.biscuit.datalog.Term> variables = new HashMap<>();
+        Option<com.clevercloud.biscuit.datalog.Term> value = ex.evaluate(variables, s);
+        assertEquals(Option.some(new com.clevercloud.biscuit.datalog.Term.Integer(7)), value);
         assertEquals("1 + 2 * 3", ex.print(s).get());
 
 
@@ -308,19 +300,19 @@ public class ParserTest extends TestCase {
 
         assertEquals(
                 Arrays.asList(
-                        new Op.Value(new ID.Integer(1)),
-                        new Op.Value(new ID.Integer(2)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(1)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(2)),
                         new Op.Binary(Op.BinaryOp.Add),
                         new Op.Unary(Op.UnaryOp.Parens),
-                        new Op.Value(new ID.Integer(3)),
+                        new Op.Value(new com.clevercloud.biscuit.datalog.Term.Integer(3)),
                         new Op.Binary(Op.BinaryOp.Mul)
                 ),
                 ex2.getOps()
         );
 
-        HashMap variables2 = new HashMap();
-        Option<ID> value2 = ex2.evaluate(variables2);
-        assertEquals(Option.some(new ID.Integer(9)), value2);
+        Map<Long,com.clevercloud.biscuit.datalog.Term> variables2 = new HashMap<>();
+        Option<com.clevercloud.biscuit.datalog.Term> value2 = ex2.evaluate(variables2, s2);
+        assertEquals(Option.some(new com.clevercloud.biscuit.datalog.Term.Integer(9)), value2);
         assertEquals("(1 + 2) * 3", ex2.print(s2).get());
     }
 }
